--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Cat's Garden</title>
         <meta name="description" content="New tab page">
 
-		<link rel="shortcut icon" href="./favicon.ico">
+		  <link rel="shortcut icon" href="./favicon.ico">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400|Raleway:200,300,400&subset=latin' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="./main2.css">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -36,7 +36,7 @@
 
 						<h3>Frequent</h3>
 						<ul class="links">
-\							<li><a href="https://www.youtube.com">YouTube</a></li>
+							<li><a href="https://www.youtube.com">YouTube</a></li>
 							<li><a href="https://www.twitter.com">Twitter</a></li>
 							<li><a href="https://www.reddit.com/r/all">All Subs</a></li>
 						</ul>
