--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <meta name="description" content="New tab page">
 
 		  <link rel="shortcut icon" href="./favicon.ico">
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400|Raleway:200,300,400&subset=latin' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400|Raleway:200,300,400&subset=latin' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="./main2.css">
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="./main.js"></script>
     </head>
     <body>
